# m4asm

./: .gitignore  CMakeLists.txt  Makefile  m4asm
.github/workflows/: cmake.yml
src/: insns.h  label.c  label.h  m4asm.c  m4asm.h
src/lib/endianness/: endianness.h
src/lib/strsep/: strsep.c  strsep.h
src/strsep/: strsep.c  strsep.h
